# cpp20-showcase

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
01_concepts/: CMakeLists.txt  concepts.h  test_concepts.cpp
02_ranges/: CMakeLists.txt  ranges_demo.h  test_ranges.cpp
03_coroutines/: CMakeLists.txt  generator.h  task.h  test_coroutines.cpp
04_modules/: CMakeLists.txt  note.md
05_jthread/: CMakeLists.txt  jthread_demo.h  test_jthread.cpp
06_lockfree/: CMakeLists.txt  spsc_queue.h  test_lockfree.cpp
07_atomic_model/: CMakeLists.txt  atomic_model.h  test_atomic_model.cpp
08_format/: CMakeLists.txt  test_format.cpp
09_mdspan/: CMakeLists.txt  test_mdspan.cpp
benchmarks/: CMakeLists.txt  bench_queue.cpp
