# <mdspan> requires C++23 and GCC >= 14 / Clang >= 17
# Skip gracefully on older compilers (e.g. GCC 13 in WSL2 Ubuntu 24)
include(CheckIncludeFileCXX)
set(CMAKE_REQUIRED_FLAGS "-std=c++23")
check_include_file_cxx(mdspan HAVE_MDSPAN)
unset(CMAKE_REQUIRED_FLAGS)

if(HAVE_MDSPAN)
    add_executable(test_mdspan test_mdspan.cpp)
    target_compile_features(test_mdspan PRIVATE cxx_std_23)
    target_link_libraries(test_mdspan PRIVATE GTest::gtest GTest::gtest_main)
    gtest_discover_tests(test_mdspan)
else()
    message(STATUS "mdspan: skipping 09_mdspan (requires GCC>=14 / Clang>=17 with C++23)")
endif()
